search: Fix stretched header bar switch

and add padding of 4px

https://bugzilla.gnome.org/show_bug.cgi?id=703974